# GDPRObf

./: README.md  gdpr_obf.py  pyproject.toml  requirements.txt
GDPRObf/: GDPRObf.py  gdpr_obf.py
src/GDPRObf/: copy_from_s3.py  gdpr_obf.py  obfuscate_fields.py  parse_json.py
src/gdpr_obfuscator/: gdprobf.py
tests/: conftest.py  test_copy_from_s3.py  test_gdpr_obf.py  test_obfuscate_fields.py  test_parse_json.py
tests/test_data/: MOCK_DATA.csv  MOCK_DATA.json  MOCK_DATA_BIG.csv  MOCK_DATA_OBF.csv  MOCK_INPUT.json  gdpr_test_data.csv  gdpr_test_data.json
