[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Joshua Hibbard"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "boto3",
  "pandas",
]
description = "A tool to obfuscate data within an AWS S3 Bucket"
name = "gdpr_obfuscator"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/JCHibbard/GDPRObf"
Issues = "https://github.com/JCHibbard/GDPRObf/issues"
